[gd_scene load_steps=2 format=3 uid="uid://death_screen_ui"]

[ext_resource type="Script" path="res://scripts/ui/death_screen.gd" id="1_script"]

[node name="DeathScreen" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0, 0, 0.7)

[node name="DeathPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(400, 350)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -175.0
offset_right = 200.0
offset_bottom = 175.0

[node name="VBoxContainer" type="VBoxContainer" parent="DeathPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="DeathPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_font_sizes/font_size = 36
text = "YOU DIED"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="DeathPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "The darkness claims another soul..."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="DeathPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CoinsLostLabel" type="Label" parent="DeathPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "Blood Coins Lost: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="DeathPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RespawnButton" type="Button" parent="DeathPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "RETURN TO VILLAGE"

[node name="QuitButton" type="Button" parent="DeathPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "QUIT TO MENU"
